--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -11,7 +11,7 @@
         const socket = io();
         let currentPage = 1;
         let totalItems = 0;
-        let itemsPerPage = 50; // maximum displayed at the same time in rt view
+        let itemsPerPage = 50; // initial value
         let totalPages = 1;
 
         socket.on('updateProducts', (products) => {
@@ -43,7 +43,7 @@
                     <tbody>
                         ${paginatedProducts.map(product => `
                             <tr class="make-it-small">
-                                <td class="make-it-center"><img src=${product.imageURL} width="28px"></td>
+                                <td class="make-it-center"><img src="${product.imageURL}" width="28px"></td>
                                 <td>${product.pid}</td>
                                 <td>${product.title}</td>
                                 <td>$${product.price}</td>
@@ -66,14 +66,40 @@
             if (currentPage > totalPages) currentPage = totalPages;
             socket.emit('requestProducts');
         }
+
+        // Apply new itemsPerPage value from the dropdown
+        function updateItemsPerPage() {
+            const selectedValue = document.getElementById('itemsPerPageDropdown').value;
+            itemsPerPage = parseInt(selectedValue);
+            currentPage = 1;  // Reset to page 1 after changing itemsPerPage
+            socket.emit('requestProducts');
+        }
     </script>
 </head>
 <body>
-    <div class=" section make-it-dark make-it-white-back">Product List - Realtime display</div>
+    <div class="section make-it-dark make-it-white-back">Product List - Realtime display</div>
     <div class="section">
         
         <div id="productList"></div>
+        
         <br>
+
+        <!-- Dropdown for items per page -->
+        <div class="field is-inline-block">
+            <div class="control">
+                <div class="select make-it-small">
+                    <select id="itemsPerPageDropdown">
+                        <option value="15" selected>15 products per page</option>
+                        <option value="30">30 products per page</option>
+                        <option value="45">45 products per page</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <button class="button make-it-small" onclick="updateItemsPerPage()">Apply</button>
+
+        <br><br>
+        
         <div class="grid-container-3c-by-1r make-it-rounded make-it-white-back make-it-dark">
             <button class="button make-it-small" onclick="changePage(-1)">Prev</button>
             <div class="content make-it-dark make-it-semi-back make-it-small make-it-rounded make-it-center section" id="productCount"></div>
