--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -17,9 +17,9 @@
             </a>
         </div>
         <div class="grid-container-3c-by-1r make-it-dark-back make-it-rounded make-it-small is-dark">
-                <a class="navbar-item is-small make-it-rounded make-it-semi" href="/products">| Products</a>
-                <a class="navbar-item is-small make-it-rounded make-it-semi" href="/carts">| Carts</a>
-                <a class="navbar-item is-small make-it-rounded make-it-semi" href="/more">| More</a>
+                <a class="navbar-item is-small make-it-rounded make-it-semi" href="/products">Products</a>
+                <a class="navbar-item is-small make-it-rounded make-it-semi" href="/carts">Carts</a>
+                <a class="navbar-item is-small make-it-rounded make-it-semi" href="/more">More</a>
         </div>
     </header>
 
