--- a/src/views/productsStatic.handlebars
+++ b/src/views/productsStatic.handlebars
@@ -80,33 +80,43 @@
             <div class="columns is-multiline is-centered">
                 {{#if products.length}}
                     {{#each products}}
-                        <div class="column is-12-mobile is-4-desktop">
-                            <div class="box">
-                                <div class="make-it-dark-back make-it-white section make-it-rounded">
+                        <div class="column is-12-mobile is-3-desktop">
+                            <div class="make-it-white-back make-it-dark make-it-rounded-top card-title-container make-it-normal">
+                                <div>
                                     {{this.title}}
                                 </div>
-                                <div class="columns section">
-                                    <div class="column is-9"><img src={{this.imageURL}} alt={{this.title}}></div>
-                                    <div class="column is-3 make-it-white-back make-it-rounded make-it-dark make-it-small">
-                                        <p><strong>Price:</strong>${{this.price}}</p>
-                                        <p><strong>Stock:</strong> {{this.stock}}</p>
-                                        <p><strong>Motor:</strong> {{#if this.motorizable}} Yes {{else}} No {{/if}}</p>
-                                        <p><strong>Lights:</strong> {{#if this.lighting}} Yes {{else}} No {{/if}}</p>
+                            </div>
+                            <div class="make-it-semi-back">
+
+                                <div class="">
+                                    <div class="">
+                                        <img src={{this.imageURL}} alt={{this.title}}>
                                     </div>
-                                    
+                                    <div class="columns make-it-white-back make-it-rounded make-it-dark make-it-small section">
+                                        <div class="column is-6 make-it-center">
+                                            <p><b>Price:</b>${{this.price}}</p>
+                                            <p><b>Stock:</b> {{this.stock}}</p>
+                                        </div>
+                                        <div class="column is-6 make-it-center">
+                                            <p><b>Motor:</b> {{#if this.motorizable}} Yes {{else}} No {{/if}}</p>
+                                            <p><b>Lights:</b> {{#if this.lighting}} Yes {{else}} No {{/if}}</p>
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <!-- Add to Cart Button (POST) -->
                                 <form id="addToCartForm-{{this.pid}}" action="/api/carts/0199112a-75eb-48a5-b04f-28659df00d75/product/{{this.pid}}" method="POST" style="display: none;">
                                     <input type="hidden" name="pid" value="{{this.pid}}">
-                                    <input type="hidden" name="quantity" value="1"> <!-- Example quantity -->
+                                    <input type="hidden" name="quantity" value="1">
                                 </form>
-                                <div class="make-it-center">
+
+
+                                <div class="make-it-dark make-it-small section make-it-center">PID: {{this.pid}}</div>
+
+
+                                <div class="make-it-right section">
                                     <button class="button make-it-small is-warning" onclick="document.getElementById('addToCartForm-{{this.pid}}').submit();">Add to cart</button>
                                 </div>
-
-                                <div class="make-it-semi make-it-small section make-it-center">PID: {{this.pid}}</div>
-
                             </div>
                         </div>
                     {{/each}}
