--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -8,34 +8,68 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top">Welcome to Our Store</h2>
+    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top">Proyecto de Programación Backend I</h2>
     <!-- Main Content Section -->
     <section class="section make-it-normal">
         <div class="container">
-            <div class="columns is-multiline">
-                <!-- Two Column Layout for First 8 Paragraphs -->
 
-                <div class="column is-12 make-it-white section">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec nisi vitae velit elementum aliquam non ut tortor. In hac habitasse platea dictumst. Nulla a condimentum odio. Etiam posuere urna sit amet risus maximus tempor. Phasellus placerat, ante nec sollicitudin feugiat, mi est vulputate velit, ac dictum libero odio id sapien.</p>
+            <div class="columns is-multiline section">
+                <div class="column is-9  make-it-rounded make-it-semi-back make-it-normal">
+                    <p class="card-title-container make-it-white make-it-dark-back">De quá se trata este proyecto</p>
+                    <br>
+                    <p class="section">El proyecto consiste de un backend para una tienda de modelos de trenes llamada 'Shopnhour'. Intregra una base de datos (Mongo) sobre Node y Express para montar un servicio de backend que provee un catalogo de productos y la gestión de carritos de compras. El catálogo de productos es almacenado en Mongo en la coleccion 'products' y los carritos en la colección 'carts'.</p>
+                    <br>
+                </div>
+                <div class="column is-3 make-it-white  make-it-small">
+                    <p>Alumno: Ernesto AC</p>
+                    <p>Proyecto de Programación Backend I: Desarrollo Avanzado de Backend, comisión 70470</p>
+                </div>
+                <br>
+                <div class="column is-6 make-it-white ">
+                    <p class="card-title-container make-it-dark make-it-rounded-top make-it-semi-back">Navegación</p>
+                    <p>El proyecto comienza con esta página y provee una barra de navegacion para moverse por algunas de las operaciones básicas.</p>
 
+                    <p>Consideraciones:</p>
+                    <p>El proyecto no implementa sesiones ni autenticacion aún por tanto el carrito al que </p>
+                </div>
+                <div class="column is-6 make-it-white ">
+                    <p class="card-title-container make-it-dark make-it-rounded-top make-it-semi-back">Rutas</p>
+                    <div class="make-it-small columns make-it-white">
+                        <div class="column is-6 section make-it-rounded">
+                            <p class="make-it-normal">API endpoints</p>
+                            <p><b>GET /api/products/ - </b>Trae todos los datos de la colección 'products' en Mongo en modo paginado</p>
+                            <p><b>GET /api/products/pid - </b>Trae un producto por su ID único, pid</p>
+                            <p><b>POST /api/products/ - </b>Crea un producto usando los parametros pasados por parámetro en el body del req con un ID único</p>
+                            <p><b>PUT /api/products/pid - </b>Modifica un registro existente por ID único</p>
+                            <p><b>DELETE /api/products/pid - </b>Marca como eliminado o elimina un registro, usa el parámetro booleano en body killFlag para cambiar el comportamiento</p>
+                            <p><b>GET /api/carts/ - </b>Devuelve todos los carritos disponibles con la información de cada producto</p>
+                            <p><b>POST /api/carts/ - </b>Crea un nuevo carrito con un ID unico y retorna su ID</p>
+                            <p><b>GET /api/carts/cid - </b>Lista los contenidos del carrito por ID (cid) con información agregada de los productos en este</p>
+                            <p><b>POST /api/carts/cid/product/pid - </b> Agrega el producto con el pid pasado o incrementa su cantidad en el carrito con cid pasado</p>
+                            <p><b>DELETE /api/carts/cid/product/pid - </b> Elimina el producto con el pid pasado del carrito pasado por pid</p>
+                            <p><b>DELETE /api/carts/cid - </b> Elimina todos los contenidos del carrito por cid</p>
+                            <p><b>/api/</b> - Esta página</p>
+                        </div>
+                        
+                        <div class="column is-6 section">
+                            <p class="make-it-normal">Vistas</p>
+                            <p><b>/</b> - Esta página</p>
+                            <p><b>/products</b> - Catálogo de productos completo</p>
+                            <p><b>/carts</b> - Vista estática de todos los carritos en el servidor</p>
+                            <p><b>/carts/cid</b> - Vista del carrito por ID</p>
+                            <p><b>/realtime/products</b> - Vista en tiempo real de la colección de objetos en 'products'</p>
+                            <p><b>/realtime/carts</b> - Vista en tiempo real de la colección de objetos en 'carts' sin detalle por producto (sólo PID y Qty)</p>
+                            <p><b>/forms/add-product</b> - Formulario para testear la abilidad de agregar un producto a la base de datos</p>
+                            <p><b>/forms/delete-product</b> - Formulario para testear la abilidad de eliminar un producto a la base de datos</p>
+                        </div>
 
+                        <br>
+                    </div>
                 </div>
 
-                <div class="column is-9 make-it-white">
-                    <p>Curabitur vel dui et turpis interdum maximus at ac nunc. Nam iaculis mauris vel est aliquet, vel tempus odio mollis. Quisque ornare efficitur nunc, ut feugiat turpis ullamcorper nec. Nulla consequat ante ut mauris volutpat interdum. Vivamus lobortis id purus sed scelerisque. Sed sodales, justo vel cursus consectetur, urna libero eleifend justo, sed dapibus felis orci ut justo.</p>
 
 
-                    <p>Quisque ullamcorper felis at sem vulputate, non dapibus neque viverra. Nam ac odio mollis, pretium felis at, gravida ante. Mauris hendrerit elit sit amet lectus vestibulum iaculis. Donec fringilla dui eget ex efficitur pharetra. Morbi sit amet pharetra sem. Aliquam interdum odio nec dolor fringilla, id pharetra felis vestibulum.</p>
-                </div>
 
-                <div class="column is-3 make-it-rounded make-it-semi-back make-it-normal">
-                    <p>Phasellus ut velit quis leo suscipit gravida. Vestibulum sit amet neque id nunc scelerisque venenatis a eu odio. Aliquam erat volutpat. Fusce et nulla sit amet est tempor sodales. In aliquam purus quis arcu rhoncus, at bibendum metus volutpat. Nam malesuada ligula sit amet libero efficitur, ac porttitor leo hendrerit. Donec sit amet eros sit amet felis vulputate ullamcorper eget id ligula.</p>
-                </div>
-
-                <!-- Last Paragraph in Single Column -->
-                <div class="column is-12 make-it-white section">
-                    <p>Donec a libero nec libero volutpat rhoncus. Nulla a urna volutpat, ultricies neque eget, mollis neque. Curabitur maximus sapien in quam varius, at facilisis orci placerat. Integer maximus sapien ut purus efficitur, sed pharetra dui sodales. Proin sit amet arcu sit amet justo elementum convallis. Curabitur suscipit sem ut augue ullamcorper, id gravida dui scelerisque. Aenean accumsan urna eu erat tincidunt ultricies. In vitae arcu sit amet purus luctus suscipit et in ante.</p>
-                </div>
             </div>
         </div>
     </section>
